# meilisearch-backup

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml
meilisearch-backup/: .dockerignore  Dockerfile  pyproject.toml
meilisearch-backup/meilisearch_backup/: __main__.py  settings.py
meilisearch-backup/meilisearch_backup/actions/: backup.py  restore.py
test/: test_add_data.sh
